# smtp2go-rust

./: .travis.yml  Cargo.toml  README.md
smtp2go/: Cargo.toml
smtp2go/src/: lib.rs
smtp2go/tests/: test_api.rs
src/: core.rs  email.rs  lib.rs
tests/: email.rs  email.rs.bk  tests.rs
