[package]

name = "smtp2go"
version = "0.1.1"
authors = ["SMTP2GO Developers <devs@smtp2go.com>"]
description = "SMTP2GO api interface for email sending"
license = "MIT"
repository = "https://github.com/smtp2go-os/smtp2go-rust"

include = [
	"**/*.rs",
	"Cargo.toml",
]

[dependencies]

regex = "0.2"
serde = "0.9"
serde_derive = "0.9"
serde_json = "0.9"
hyper = "0.10.4"
hyper-native-tls = "0.2.2"