[package]

name = "smtp2go"
version = "0.1.5"
authors = ["SMTP2GO Developers <devs@smtp2go.com>"]
description = "SMTP2GO api interface for email sending"
license = "MIT"
repository = "https://github.com/smtp2go-oss/smtp2go-rust"
edition = "2018"
include = [
	"**/*.rs",
	"Cargo.toml",
]

[dependencies]

actix-rt = "2.1.0"
reqwest = { version = "0.11.2", features = [ "json" ] }
regex = "1.4.5"
serde = { version = "1.0.124", features = ["derive"] }
serde_json = "1.0.64"